Gp: fix output tabs visibility

--- a/src/assets/less/pages/globalping.less
+++ b/src/assets/less/pages/globalping.less
@@ -628,9 +628,12 @@
 
 				&_raw-output, &_table-output {
 					width: 100%;
+					visibility: visible;
 
 					&.output-hidden {
-						display: none;
+						position: absolute;
+						left: -100%;
+						visibility: hidden;
 					}
 				}
 
